removed hospital pane, fixed map overlapped by sidebar for user view calcs

--- a/css/main.css
+++ b/css/main.css
@@ -731,15 +731,7 @@ div#location-information-container > p > span#placename {
 div#aggregate-date-window {
   position: absolute;
   top:58px;
-  height:calc(50% - 58px);
-  overflow-y: auto;
-  overflow-x: hidden;
-  transition: 0.3s;
-}
-div#hospital-info {
-  position: absolute;
-  top:50%;
-  height: 50%;
+  height:calc(100% - 58px);
   overflow-y: auto;
   overflow-x: hidden;
   transition: 0.3s;
@@ -759,19 +751,10 @@ div.info-pane {
 div.info-pane.top {
   border-bottom:0px;
 }
-div.info-pane.top {
-  border-top:0px;
-}
 div.info-header {
   height:48px;
   line-height:48px;
   background-color:rgba(207, 216, 220, 1);
-}
-div#hospital-info > div.info-header {
-  font-family: Calibri,Candara,Segoe,Segoe UI,Optima,Arial,sans-serif; 
-  font-size:20px;
-  font-weight:bold;
-  color:rgba(38, 50, 56, 1);
 }
 div#aggregate-date-window > div.info-header > div.info-header-element {
   cursor:pointer;
@@ -901,96 +884,6 @@ div.variable-display > div.variable.active > div.figures > div.figure{
   color: rgba(207, 216, 220, 1);
   padding: 0 4px 0 4px;
 }
-
-div.hospital-display > div.hospital > div.information {
-  display:none;
-}
-div.hospital-display > div.hospital.active > div.information {
-  display:block;
-}
-
-div.hospital-display > div.hospital > div.header {
-  height: 32px;
-  line-height: 32px;
-  width: 360px;
-  margin: 0 auto;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  text-align:center;
-  color:rgba(207, 216, 220, 1);
-  background-color: rgba(38, 50, 56, 1);
-  border: 1px solid rgba(112, 112, 112, 1);
-  border-radius: 16px;
-  font-weight:bold;
-  font-size:0.8em;
-  font-family: 'Noto Sans', Helvetica, arial, sans-serif;
-  overflow: hidden;
-}
-div.hospital-display > div.hospital > div.header > div.name {
-  float:left;
-  text-align:left;
-  margin-left:12px;
-  max-width:256px;
-  text-overflow: ellipsis;
-  overflow:hidden;
-  white-space:nowrap;
-}
-div.hospital-display > div.hospital > div.information > div.info-item {
-  color: rgba(38, 50, 56, 1);
-  background-color: rgba(207, 216, 220, 1);
-  border: 1px solid rgba(38, 50, 56, 1);
-  height: 32px;
-  width: 340px;
-  margin: 0 auto;
-  margin-top: 12px;
-  margin-bottom: 12px;
-  text-align:center;
-  border-radius: 16px;
-  line-height: 32px;
-  font-weight:bold;
-  font-size:0.8em;
-  font-family: 'Noto Sans', Helvetica, arial, sans-serif;
-}
-div.hospital-display > div.hospital > div.information > div.info-item > i, div.hospital-display > div.hospital > div.information > div.info-item > svg, div.hospital-display > div.hospital > div.information > div.info-item > a > i{
-  float:left;
-  margin:0 12px 0 12px;
-  width:16px;
-  transform:translate(0, 40%);
-}
-div.hospital-display > div.hospital > div.information > div.info-item > i {
-  transform:translate(0, 80%);
-}
-
-div.hospital-display > div.hospital > div.information > div.info-item.cursor{
-  cursor:pointer;
-  z-index:9999;
-}
-div.hospital-display > div.hospital > div.information > div.info-item.red-border {
-  border: 2px solid rgba(183, 28, 28, 1);
-}
-div.hospital-display > div.hospital > div.information > div.info-item.green-border {
-  border: 2px solid rgba(27, 94, 32, 1);
-}
-div.hospital-display > div.hospital > div.header > svg {
-  float:right;
-  transform:translate(0, 40%);
-  margin-right:12px;
-  cursor:pointer;
-}
-div.hospital-display > div.hospital.active > div.header > svg {
-  transform:translate(0, 40%) rotate(180deg);
-}
-div.hospital > div.header > div.information {
-  overflow-y: hidden;
-	max-height: 256px; /* approximate max height */
-
-	transition-property: all;
-	transition-duration: .5s;
-	transition-timing-function: cubic-bezier(0, 1, 0.5, 1);
-}
-div.hospital > div.header > div.information.closed {
-  max-height:0;
-}
 div#variable-loading-placeholder:after {
   overflow: hidden;
   display: inline-block;
@@ -1010,4 +903,19 @@ div#variable-loading-placeholder:after {
   to {
     width: 1.25em;    
   }
+}
+body > main > div#map {
+  top: 44px;
+  left: 400px;
+  width: calc(100% - 400px);
+  height: calc(100% - 44px);
+  position: fixed;
+  overflow: hidden;
+  z-index: 1000;
+  transition: 0.3s;
+}
+body > main > div.closed#map {
+  width: 100%;
+  left: 0px;
+  transition: 0.3s;
 }
